# cpp_modules_example

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp  mymodule.cppm
